[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10"
name = "mpl_ascii"
dependencies = [
"matplotlib>=3.8.3"
]
version = "0.2.0"
description = "A matplotlib backend that produces plots using only ASCII characters"
license = {text = "MIT License"}
readme = "README.md"
keywords = ["matplotlib", "plotting", "ASCII"]

[tool.setuptools]
packages = ["mpl_ascii"]