[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10"
name = "mpl_ascii"
dependencies = [
"matplotlib>=3.8.3",
"rich>=13.7.1"
]
version = "0.4.0"
description = "A matplotlib backend that produces plots using only ASCII characters"
license = {text = "MIT License"}
readme = "README.md"
keywords = ["matplotlib", "plotting", "ASCII"]

[project.urls]
Homepage = "https://github.com/chriscave/mpl_ascii"

[tool.setuptools]
packages = ["mpl_ascii"]